<resources>
    <string name="facebook_app_id">418663655584222</string>
    <string name="app_name">אגודת הסטודנטים</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>





    <string name="accessToken">EAAIgIRoZA0MMBADqHZBGTLMfZBzZCdPkyoEBoEGnZBFnSeEyZBqXoi5eE3e2w7j8g4fp0QFK11wltZA7a8KSSKn1VO9wEIwugE4pvZAZBpMIijiXa99pa32FpYXRZAM6Cda7SyPAehSWoCFzZBNV3Q6OpdKfPiUUZChTRr3VBHq89F58uZBGhh0VZAKnOY</string>
    <string name="appId">598276497330371</string>
    <string name="userId">113643849904000</string>


    <string name="menu_home">דף ראשי</string>
    <string name="menu_events">גלרייה</string>
    <string name="menu_login">כניסה</string>
    <string name="menu_about">מי אנחנו</string>
    <string name="menu_send">Send</string>
    <string name="aguda_jce">אגודת הסטודנטים</string>
    <string name="menu_marathon">מרתונים</string>
    <string name="menu_posts">צור קשר</string>
    <string name="title_activity_about_">About_Act</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_posts">PostsActivity</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="title_activity_marathons">MarathonsActivity</string>



    <string name="mange_contact_us">Mange Contact Us</string>


    <string-array name="android_virsions">

        <item>Cup cake</item>
        <item>hello</item>
        <item>my</item>
        <item>name</item>
        <item>is</item>
        <item>mahmood</item>

    </string-array>
    <string name="title_activity_login">Login</string>
    <string name="login_name">Email </string>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>
    <string name="_number_hint">0541232123</string>
</resources>
